<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- ***************************
         About information
         *************************** -->
    <string name="about_translators">Launchpad Contributions:
  OpenIntents devs https://launchpad.net/~openintents-devs</string>
    
    <!-- Short explanation of the application (max. 80 characters) -->
    <string name="about_comments">Access your OI apps using a web browser.</string>
    
    <!-- ***************************
         Application strings
         *************************** -->
    <string name="app_name">OI WiFi Server</string>
    <string name="wifistatus">WiFi Status</string>
    <string name="disconnected">disconnected</string>
    <string name="connected">connected</string>
    <string name="url">URL</string>
    <string name="startServer">Start Server</string>
    <string name="stopServer">Stop Server</string>
    <string name="preferences">Preferences</string>
    <string name="errorPortBoundaries" tools:ignore="UnusedResources,UnusedResources">Port must be between 1000 and 65535</string>
    <string name="errorPortDuplicate" tools:ignore="UnusedResources">Ports for http and https connections must not be the same!</string>
    <string name="errorPasswordNotEmpty" tools:ignore="UnusedResources">Password must not be empty!</string>
    <string name="warningSetPassword">Authentication enabled. Do not forget to configure a password!</string>
    
    <!-- ***************************
         Preferences
         *************************** -->
    <string name="prefsCategoryServer">Server</string>
    <string name="prefsSSLEnableTitle">Enable SSL</string>
    <string name="prefsSSLEnableSummary">Enables SSL to communicate via a secure https connection.</string>
    <string name="prefsSSLPortTitle">SSL Port</string>
    <string name="prefsSSLPortSummary">This port is used for https connections.</string>
    <string name="prefsPortTitle">Default Port</string>
    <string name="prefsPortSummary">This port is used for normal http connections.</string>
    <string name="prefsCategoryPassword">Password protection</string>
    <string name="prefsPasswordEnableTitle">Enable Password</string>
    <string name="prefsPasswordEnableSummary">Asks the user to enter a password when connectiong to the server.</string>
    <string name="prefsCustomPasswordTitle">Password</string>
    <string name="prefsCustomPasswordSummary">Set the custom password</string>
</resources>