<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textWifiStatus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/wifistatus"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textWifiStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/disconnected"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textURL_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textWifiStatus_label"
        android:text="@string/url"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/textWifiStatus"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textPassword_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textURL_label"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextSwitcher
        android:id="@+id/textSwitcherPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/textURL"
        android:layout_toRightOf="@id/textPassword_label"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/textPasswordHidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/hiddenPassword"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/textPasswordShown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TextSwitcher>
    
    <ToggleButton
		android:id="@+id/toggleStartStopServer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_below="@id/textPassword_label"
		android:layout_margin="5dp"
		android:textOff="@string/startServer"
		android:textOn="@string/stopServer" />
</RelativeLayout>